# quadratic

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  build.sh  quadratic
src/: CMakeLists.txt  main.c  quadratic.c  quadratic.h  testlib.h  tests.c  tests.h  utils.c  utils.h
